Fixed Scrollbar apperance

--- a/cego-app/src/styles.scss
+++ b/cego-app/src/styles.scss
@@ -3,6 +3,29 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgba($color: #303030, $alpha: 1) }
 
+/* width */
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba($color: #303030, $alpha: 1); 
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #c2185b; 
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #c2185b; 
+    width: 10px;
+}
+
 .m0 {
     margin: 0;
 }
